# osdu-python-models

./: .commitlintrc.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-and-test.yml  code-scanning.yml  lint-pr.yml  release.yml
samples/: author_welllog.py
schemas/2026.05.22/abstract/: AbstractActivityParameter.1.1.0.json  AbstractActivityState.1.0.0.json  AbstractBinGrid.1.1.0.json  AbstractCollaborationLifecycleEvent.1.0.0.json  AbstractColumnBasedTable.1.1.0.json  AbstractColumnBasedTable.1.2.0.json  AbstractColumnBasedTable.1.2.1.json  AbstractCompressionInfo.1.1.0.json  AbstractContactUserProfile.1.0.0.json  AbstractContent.1.0.0.json  AbstractDataset.1.0.1.json  AbstractDecisionQualityElement.1.0.0.json  AbstractDowntimeContext.1.0.0.json  AbstractFacility.1.1.0.json  AbstractFacilityEvent.1.1.0.json  AbstractFacilityOperator.1.1.0.json  AbstractFacilityState.1.1.0.json  AbstractFile.1.0.1.json  AbstractFileCollection.1.0.1.json  AbstractFileSourceInfo.1.0.1.json  AbstractFluidAdditive.1.0.0.json  AbstractGenericReservoirUnit.1.0.0.json  AbstractGenericReservoirUnit.1.1.0.json  AbstractGenericReservoirUnit.2.0.0.json  AbstractGeoJson.PropertiesBinGridCorners.1.0.0.json  AbstractGeoJson.PropertiesSeismic2DLineNavigation.1.0.0.json  AbstractGeologicUnitInterpretation.1.1.0.json  AbstractInterpretation.1.1.0.json  AbstractLabelAndValue.1.0.0.json  AbstractLocationUncertainty.1.0.0.json  AbstractMaster.1.2.0.json  AbstractPTCondition.1.0.0.json  AbstractPTCondition.1.1.0.json  AbstractProjectActivity.1.1.0.json  AbstractProjectActivity.1.2.0.json  AbstractProppantAgent.1.0.0.json  AbstractReferencePropertyType.1.2.0.json  AbstractReferencePropertyType.1.2.1.json  AbstractReferencePropertyType.1.2.2.json  AbstractReferenceValueUpgrade.1.0.0.json  (+30 more)
schemas/2026.05.22/dataset/: ConnectedSource.Generic.1.0.0.json  ConnectedSource.Generic.1.0.1.json  ETPDataspace.1.0.1.json  File.CompressedVectorHeaders.1.1.0.json  File.EML.1.0.0.json  File.EML.1.1.0.json  File.Generic.1.1.0.json  File.GeoJSON.1.1.0.json  File.HDF5.1.0.0.json  File.HDF5.1.1.0.json  File.Image.JPEG.1.1.0.json  File.Image.PNG.1.1.0.json  File.Image.TIFF.1.1.0.json  File.Image.WorldFile.1.1.0.json  File.OGC.GeoTIFF.1.1.0.json  File.PRODML.1.0.0.json  File.PRODML.1.1.0.json  File.SeismicHistogram.1.0.0.json  File.SeismicHistogram.1.1.0.json  File.SeismicLineGeometry.1.0.0.json  File.SeismicLineGeometry.1.1.0.json  File.TabularData.1.0.0.json  File.WITSML.1.1.0.json  FileCollection.Bluware.OpenVDS.1.1.0.json  FileCollection.Bluware.OpenVDS.1.2.0.json  FileCollection.EPC.1.0.0.json  FileCollection.EPC.1.0.1.json  FileCollection.EPC.1.0.2.json  FileCollection.Esri.Shape.1.1.0.json  FileCollection.Generic.1.1.0.json  FileCollection.SEGA.1.0.0.json  FileCollection.SEGA.1.1.0.json  FileCollection.SEGB.1.0.0.json  FileCollection.SEGB.1.1.0.json  FileCollection.SEGD.1.0.0.json  FileCollection.SEGD.1.1.0.json  FileCollection.SEGD.1.2.0.json  FileCollection.SEGY.1.1.0.json  FileCollection.SEGY.1.2.0.json  FileCollection.SEGY.1.3.0.json  (+5 more)
schemas/2026.05.22/master-data/: ActivityPlan.1.1.0.json  ActivityPlan.1.2.0.json  ActivityTemplate.1.1.0.json  ActivityTemplateArc.1.1.0.json  (+153 more)
tests/: test_roundtrip.py  test_welllog_roundtrip.py
tools/: generate.py
(+213 files in other folders)
