[project]
name = "osdu-python-models"
version = "0.3.0"
description = "Typed Pydantic models for OSDU data payloads — opt-in companion to osdu-python-client"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Equinor" }]
dependencies = [
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "datamodel-code-generator>=0.26",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Lint only hand-written sources. `src/osdu_models` is datamodel-codegen output
# (gitignored, regenerable, never hand-edited), so it is intentionally excluded.
target-version = "py310"
include = ["tools/**/*.py", "tests/**/*.py", "samples/**/*.py"]
extend-exclude = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
