[project]
name = "osdu-python-models"
version = "0.6.0"
description = "Typed Pydantic models for OSDU data payloads — opt-in companion to osdu-python-client"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Equinor" }]
keywords = ["osdu", "pydantic", "schemas", "models", "wellbore", "ddms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.9",
]

[project.urls]
Homepage = "https://github.com/equinor/osdu-python-models"
Repository = "https://github.com/equinor/osdu-python-models"
Issues = "https://github.com/equinor/osdu-python-models/issues"

[project.optional-dependencies]
dev = [
    "datamodel-code-generator>=0.26",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Lint only hand-written sources. `src/osdu_models` is datamodel-codegen output
# (gitignored, regenerable, never hand-edited), so it is intentionally excluded.
target-version = "py310"
include = ["tools/**/*.py", "tests/**/*.py", "samples/**/*.py"]
extend-exclude = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
